--- a/style/style.css
+++ b/style/style.css
@@ -8,9 +8,17 @@ body {
   justify-content: center;
   align-items: center;
 }
-canvas {
+/* canvas {
   position: absolute;
   top:0;
   left:0;
   z-index: -1;
+} */
+
+#container3D canvas {
+  width: 100vw !important;
+  height: 100vh !important;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
