--- a/style/style.css
+++ b/style/style.css
@@ -8,18 +8,29 @@ body {
   justify-content: center;
   align-items: center;
 }
-/* canvas {
-  position: absolute;
-  top:0;
-  left:0;
-  z-index: -1;
-} */
 
-#container3D canvas {
-  width: 80% !important;
-  height: 80% !important;
+/* #container3D canvas {
+  width: 130vw !important;
+  height: 130vh !important;
   position: absolute;
   top: 0;
-  margin-left: -35%;
-  margin-top: 40%;
+  margin-left: -50%;
+  margin-top: 35%;
+} */
+
+#container3D {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;
+  margin-left: -40%;
 }
+
+#container3D canvas {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
