--- a/style/style.css
+++ b/style/style.css
@@ -9,20 +9,12 @@ body {
   align-items: center;
 }
 
-/* #container3D canvas {
-  width: 130vw !important;
-  height: 130vh !important;
-  position: absolute;
-  top: 0;
-  margin-left: -50%;
-  margin-top: 35%;
-} */
 
 #container3D {
   position: relative;
   width: 100%;
   height: 0;
-  padding-bottom: 75%;
+  padding-bottom: 100%;
   margin-left: -40%;
 }
 
@@ -34,3 +26,18 @@ body {
   height: 100%;
 }
 
+#spaceShipContainer {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;
+  margin-left: 40%;
+}
+
+#spaceShipContainer canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
+}
