--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ body {
   width: 100%;
   height: 0;
   padding-bottom: 75%;
-  margin-left: 40%;
+  margin-right: -40%;
 }
 
 #spaceShipContainer canvas {
