--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-  background: black;
+  background: white;
   overflow: hidden;
   display: flex;
   justify-content: center;
