--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,8 @@
-body {
+body { 
   width: 100vw;
   height: 100vh;
   margin: 0;
-  background: white;
+  background: black;
   overflow: hidden;
   display: flex;
   justify-content: center;
