--- a/style/style.css
+++ b/style/style.css
@@ -2,13 +2,26 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-  background: black;
+  background: white;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+#mainContainer{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#cont{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 #container3D {
   position: relative;
