--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body { 
   width: 100%;
@@ -25,23 +26,28 @@ body {
   font-size: 60px;
   color: white;
   font-family: 'Bungee Shade', cursive;
-  border-right: 4px solid white;
-  animation: cursor 1s infinite step-end, typing 15s infinite steps(13);
+  border-right: 5px solid white;
+  animation: cursorelampeggiante 1.5s infinite step-end, scritturatesto 10s infinite steps(13);
   white-space: nowrap;
   overflow: hidden;
+  user-select: none; 
+}
+#mainContainer h1:hover{
+  animation-play-state: paused;
 }
 
-@keyframes cursor{
-  0%, 50%, 100%{border-color: transparent;}
-  25%, 75%{border-color: white;}
+@keyframes cursorelampeggiante{ /*animazione del cursore lampeggiante */
+  0%, 50%, 100%{border-color: transparent;} /* allo 0%, 50% e 100% il cursore sarà invisibile */
+  25%, 75%{border-color: white;} /* al 25% e 75% il cursore sarà visibile */
 }
 
-@keyframes typing{
-  0%{ width: 5ch} /*Text is hidden*/
-  20%{ width: 14ch;} /*The enitre header will be typed out*/
-  80%{ width: 14ch;} /*Text stays visible*/
-  90%{ width: 5ch;} /*Text is deleted*/
-  100%{ width: 5ch;} /*Text stays hidden*/
+@keyframes scritturatesto{ /*animazione della scrittura del testo */
+  0%{ width: 5ch} /*al punto 0 della scrittura la parola defenders sarà nascosta*/
+  20%{ width: 14ch;} /* al punto 20% della scrittura la parola defenders sarà visibile completamente*/
+  40%{ width: 14ch;} /* al punto 40% della scrittura la parola defenders sarà visibile completamente*/
+  70%{ width: 14ch;} /* al punto 70% della scrittura la parola defenders sarà visibile completamente*/
+  80%{ width: 5ch;} /* al punto 80% della scrittura la parola defenders sarà cancellata*/
+  100%{ width: 5ch;} /* al punto 100% della scrittura la parola defenders sarà invisibile*/
 }
 
 
@@ -50,13 +56,10 @@ body {
   width: 100%;
   height: 100%;
   top: 70%;
-  right: 50%;
+  right: 40%;
 }
 
 #container3D canvas {
-  position: absolute;
-  left: 0;
-  bottom: 0;
   width: 100%;
   height: 100%;
 }
@@ -64,15 +67,55 @@ body {
 #spaceShipContainer {
   position: relative;
   width: 100%;
-  height: 0;
-  padding-bottom: 75%;
-  margin-right: -40%;
+  height: 100%;
+  top: 75%;
+  right: -40%;
 }
 
 #spaceShipContainer canvas {
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+/* CSS */
+.playbutton {
+  background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  position: fixed;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-family: 'Press Start 2P', cursive;
+}
+
+.playbutton:hover {
+  background-color: #fff;
+}
+
+.playbutton:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .playbutton {
+    min-width: 120px;
+    padding: 0 25px;
+  }
 }
