--- a/style/style.css
+++ b/style/style.css
@@ -32,9 +32,6 @@ body {
   overflow: hidden;
   user-select: none; 
 }
-#mainContainer h1:hover{
-  animation-play-state: paused;
-}
 
 @keyframes cursorelampeggiante{ /*animazione del cursore lampeggiante */
   0%, 50%, 100%{border-color: transparent;} /* allo 0%, 50% e 100% il cursore sarà invisibile */
@@ -118,4 +115,15 @@ body {
     min-width: 120px;
     padding: 0 25px;
   }
+}
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white url(../public/assets/images/preloader.gif) no-repeat center center;
+  background-size: 20%;
+  z-index: 100;
 }
