--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -30,8 +31,9 @@ body {
   animation: cursorelampeggiante 1.5s infinite step-end, scritturatesto 10s infinite steps(13);
   white-space: nowrap;
   overflow: hidden;
-  user-select: none; 
+  user-select: none;
 }
+
 
 @keyframes cursorelampeggiante{ /*animazione del cursore lampeggiante */
   0%, 50%, 100%{border-color: transparent;} /* allo 0%, 50% e 100% il cursore sarà invisibile */
