--- a/style/style.css
+++ b/style/style.css
@@ -32,6 +32,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   user-select: none;
+
 }
 
 
@@ -55,6 +56,7 @@ body {
   width: 100%;
   height: 100%;
   top: 70%;
+  right: 30%;
 }
 
 #container3D canvas {
@@ -63,17 +65,14 @@ body {
 }
 
 #spaceShipContainer {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100%;
-  top: 75%;
-  right: -40%;
+  bottom: 75%;
 }
 
-#spaceShipContainer canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
+#spaceShipContainer canvas 
+{
   width: 100%;
   height: 100%;
 }
@@ -88,7 +87,10 @@ body {
   box-shadow: #422800 4px 4px 0 0;
   color: #422800;
   cursor: pointer;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 60%;
   font-weight: 600;
   font-size: 18px;
   padding: 0 18px;
@@ -113,7 +115,7 @@ body {
 
 @media (min-width: 768px) {
   .playbutton {
-    min-width: 120px;
+    min-width: 180px;
     padding: 0 25px;
   }
 }
