--- a/style/style.css
+++ b/style/style.css
@@ -66,9 +66,9 @@ body {
 
 #spaceShipContainer {
   position: fixed;
-  width: 25%;
+  width: 15%;
   height: 25%;
-  top: 45%;
+  top: 40%;
 
 }
 
@@ -114,13 +114,7 @@ body {
   transform: translate(2px, 2px);
 }
 
-@media (min-width: 768px) {
-  .playbutton {
-    min-width: 160px;
-    padding: 0 25px;
-    z-index: 1;
-  }
-}
+
 
 #preloader {
   position: fixed;
@@ -131,4 +125,28 @@ body {
   background: white url(../public/assets/images/preloader.gif) no-repeat center center;
   background-size: 20%;
   z-index: 100;
+}
+
+@media only screen and (max-width: 600px) {
+  .playbutton {
+    min-width: 160px;
+    padding: 0 25px;
+    z-index: 1;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+
+}
+
+@media only screen and (min-width: 768px) {
+
+}
+
+@media only screen and (min-width: 992px) {
+
+}
+
+@media only screen and (min-width: 1200px) {
+
 }
