--- a/style/style.css
+++ b/style/style.css
@@ -120,17 +120,21 @@ body {
     padding: 0 25px;
     z-index: 100;
   }
-}
-
-@media only screen and (min-width: 600px) {
 
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) and (max-width: 768px){
+
 
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 768px) and (max-width: 992px){
+
+
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px){
+
 
 }
 
