--- a/style/style.css
+++ b/style/style.css
@@ -1,15 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+:root {
+  --main-color: #831DE8;
+  --main-color-lighter: #9C38FF;
+  --main-color-darker: #52099C;
+  --complementary-color: #9A9C00;
+  --complementary-color-lighter: #E6E81C;
+  --logourl: "../public/assets/images/logo.svg";
+}
+
 body { 
   width: 100%;
   height: 100%;
   margin: 0;
   background: black;
   overflow: hidden;
-  /* display:  flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
 }
 
 #mainContainer{
@@ -71,11 +77,11 @@ body {
 
 
 .playbutton {
-  background-color: #fbeee0;
-  border: 2px solid #422800;
+  background-color: ivory;
+  border: 2px solid var(--main-color);
   border-radius: 30px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
+  box-shadow: var(--main-color) 4px 4px 0 0;
+  color: black;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -95,12 +101,16 @@ body {
 }
 
 .playbutton:hover {
-  background-color: #fff;
+  background-color: white;
+  box-shadow: var(--main-color-darker) 4px 4px 0 0;
+  border: 2px solid var(--main-color-darker);
 }
 
 .playbutton:active {
-  box-shadow: #422800 2px 2px 0 0;
+  box-shadow: var(--main-color-lighter) 2px 2px 0 0;
+  border: 1px solid var(--main-color-lighter);
   transform: translate(2px, 2px);
+  background-color: white;
 }
 
 
@@ -177,12 +187,6 @@ body {
     display: none;
   }
 
-  .earthcont{
-
-  }
-  .playbutton{
-
-  }
 
 }
 
