add purple color on active button navbar

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -94,3 +94,9 @@
     outline: none;
     box-shadow: none;
 }
+
+.active{
+    background: var(--main-color);
+    color: var(--complementary-color-lighter);
+    border-radius: 30px;
+}
