--- a/style/navbar.css
+++ b/style/navbar.css
@@ -86,6 +86,13 @@
 
 .offcanvas.show{
     border-radius: 20px;
+    .btn-outline-light{
+        margin-top: 30px;
+        border-radius: 10px;
+    }
+    .nav-item{
+        margin-top: 20px;
+    }
 }
 
 
@@ -99,4 +106,6 @@
     background: var(--main-color);
     color: var(--complementary-color-lighter);
     border-radius: 30px;
+
 }
+
