--- a/style/style.css
+++ b/style/style.css
@@ -153,7 +153,7 @@ body {
 
 @media only screen and (max-width: 600px) {
   .playbutton {
-    min-width: 140px;
+    min-width: 120px;
     padding: 0 18px;
     z-index: 1;
   }
@@ -184,7 +184,7 @@ body {
   }
 
   .playbutton{
-    min-width: 170px;
+    min-width: 140px;
     padding: 0 18px;
     z-index: 1;
   }
@@ -200,6 +200,12 @@ body {
 
   .spaceshipcont{
     display: none;
+  }
+
+  .playbutton{
+    min-width: 160px;
+    padding: 0 18px;
+    z-index: 1;
   }
 
 
@@ -222,6 +228,12 @@ body {
   width: 15%;
   height: 25%;
   top: 40%;
+}
+
+.playbutton{
+  min-width: 180px;
+  padding: 0 18px;
+  z-index: 1;
 }
 
 }
