--- a/style/style.css
+++ b/style/style.css
@@ -16,16 +16,42 @@ body {
   margin: 0;
   background: black;
   overflow: hidden;
+  min-height: 900px;
 }
 
-#mainContainer{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+#mainContain{
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
+
+.spaceshipContainer{
+  position: fixed;
+  top: 130px;
+  left: 0;
+  width: 100%;
+  height: 25%;
+}
+
+.titlebuttonContainer
+{
+  position: fixed;
+  top: calc(25% + 130px);
+  left: 0;
+  width: 100%;
+  height: 30%;
+  display: flex;
+  justify-content: center;
+}
+
+.earthContainer{
+  position: fixed;
+  top: calc(55% + 130px);
+  left: 0;
+  width: 100%;
+  height: calc(100% - (55% + 130px));
+}
+
 
 .centeredTitle{
   position: fixed;
@@ -40,54 +66,6 @@ body {
   overflow: hidden;
   user-select: none;
 
-}
-
-
-@keyframes cursorelampeggiante{ /*animazione del cursore lampeggiante */
-  0%, 50%, 100%{border-color: transparent;} /* allo 0%, 50% e 100% il cursore sarà invisibile */
-  25%, 75%{border-color: white;} /* al 25% e 75% il cursore sarà visibile */
-}
-
-@keyframes scritturatesto{ /*animazione della scrittura del testo */
-  0%{ width: 5ch} /*al punto 0 della scrittura la parola defenders sarà nascosta*/
-  20%{ width: 14ch;} /* al punto 20% della scrittura la parola defenders sarà visibile completamente*/
-  40%{ width: 14ch;} /* al punto 40% della scrittura la parola defenders sarà visibile completamente*/
-  70%{ width: 14ch;} /* al punto 70% della scrittura la parola defenders sarà visibile completamente*/
-  80%{ width: 5ch;} /* al punto 80% della scrittura la parola defenders sarà cancellata*/
-  100%{ width: 5ch;} /* al punto 100% della scrittura la parola defenders sarà invisibile*/
-}
-
-
-.earthcont {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 70%;
-  right: 30%;
-  margin: 0%;
-}
-
-.earthcont canvas{
-  padding-left: 0;
-  padding-right: 0;
-  margin-left: auto;
-  margin-right: auto;
-
-}
-
-
-.spaceshipcont {
-  position: fixed;
-  width: 15%;
-  height: 25%;
-  top: 40%;
-}
-
-.spaceshipcont canvas{
-  padding-left: 0;
-  padding-right: 0;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 
@@ -128,6 +106,20 @@ body {
   background-color: white;
 }
 
+@keyframes cursorelampeggiante{ /*animazione del cursore lampeggiante */
+  0%, 50%, 100%{border-color: transparent;} /* allo 0%, 50% e 100% il cursore sarà invisibile */
+  25%, 75%{border-color: white;} /* al 25% e 75% il cursore sarà visibile */
+}
+
+@keyframes scritturatesto{ /*animazione della scrittura del testo */
+  0%{ width: 5ch} /*al punto 0 della scrittura la parola defenders sarà nascosta*/
+  20%{ width: 14ch;} /* al punto 20% della scrittura la parola defenders sarà visibile completamente*/
+  40%{ width: 14ch;} /* al punto 40% della scrittura la parola defenders sarà visibile completamente*/
+  70%{ width: 14ch;} /* al punto 70% della scrittura la parola defenders sarà visibile completamente*/
+  80%{ width: 5ch;} /* al punto 80% della scrittura la parola defenders sarà cancellata*/
+  100%{ width: 5ch;} /* al punto 100% della scrittura la parola defenders sarà invisibile*/
+}
+
 
 .spiner-wrapper {
   position: fixed;
@@ -148,6 +140,8 @@ body {
   height: 50px;
   color: white;
 }
+
+
 
 
 
