--- a/style/style.css
+++ b/style/style.css
@@ -16,10 +16,10 @@ body {
   margin: 0;
   background: black;
   overflow: hidden;
-  min-height: 900px;
 }
 
-#mainContain{
+
+.homecontainer{
   width: 100vw;
   height: 100vh;
   overflow: hidden;
