--- a/style/style.css
+++ b/style/style.css
@@ -136,13 +136,14 @@ body {
 .recordtablecontainer{
   z-index: 1;
   width: 90%;
-  height: auto;
+  height: 60%;
   position: fixed;
   align-items: center;
   top: 30%;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.9);
   padding: 20px;
+  overflow: auto;
 }
 
 .pagetitle{
