--- a/style/style.css
+++ b/style/style.css
@@ -54,7 +54,6 @@ body {
   height: calc(100% - (55% + 130px));
 }
 
-
 .centeredTitle{
   position: fixed;
   display: block;
@@ -69,7 +68,6 @@ body {
   user-select: none;
 
 }
-
 
 .playbutton {
   background-color: white;
@@ -108,6 +106,109 @@ body {
   background-color: white;
 }
 
+.containAll{
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.recordtablecontainer{
+  z-index: 1;
+  width: 90%;
+  height: auto;
+  position: relative;
+  align-items: center;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 20px;
+  overflow: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.pagetitle{
+  font-size: 80px;
+  font-weight: bold;
+  font-family: 'Bebas Neue', sans-serif;
+  letter-spacing: 3px;
+  color: white;
+  animation: shadows 3s ease-in infinite, move 3s ease-in infinite;
+  position: relative;
+  padding-bottom: 10px;
+  margin-left: 18px;
+}
+
+.containeroverlaybg{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: calc(100vh - 150px);
+  position: fixed;
+  top: 150px;
+  left: 0;
+  z-index: 1;
+}
+
+.descriptionrules{
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Bebas Neue', sans-serif;
+  letter-spacing: 3px;
+  color: white;
+  position: relative;
+  padding-bottom: 10px;
+  text-align: center;
+  width: 80%;
+}
+
+.cursor{
+  width: 30px;
+  height: 30px;
+  border: 1px solid white;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 100;
+  transition-duration: 0.1s;
+  transition-timing-function: ease-out;
+  animation: animatePointer 1s infinite alternate;
+  pointer-events: none;
+}
+
+.cursor::after{
+  content: "";
+  width: 20px;
+  height: 20px;
+  border: 10px var(--main-color) solid;
+  opacity: 0.5;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+.titlerulespage{
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  margin-bottom: 10px;
+}
+
+.enemyrow{
+  padding-top: 40px;
+  padding-bottom: 10px;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 10px;
+}
+
 @keyframes cursorelampeggiante{ /*animazione del cursore lampeggiante */
   0%, 50%, 100%{border-color: transparent;} /* allo 0%, 50% e 100% il cursore sarà invisibile */
   25%, 75%{border-color: white;} /* al 25% e 75% il cursore sarà visibile */
@@ -122,45 +223,9 @@ body {
   100%{ width: 5ch;} /* al punto 100% della scrittura la parola defenders sarà invisibile*/
 }
 
-
-.containAll{
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-}
-
-.recordtablecontainer{
-  z-index: 1;
-  width: 90%;
-  height: 60%;
-  position: fixed;
-  align-items: center;
-  top: 30%;
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 20px;
-  overflow: auto;
-}
-
-.pagetitle{
-  font-size: 80px;
-  font-weight: bold;
-  position: fixed;
-  font-family: 'Bebas Neue', sans-serif;
-  letter-spacing: 3px;
-  color: white;
-  display: block;
-  top: 140px;
-  animation: shadows 3s ease-in infinite, move 3s ease-in infinite;
-}
-
 @keyframes shadows {
   0% {
-    text-shadow: none;
+    text-shadow: 3px 3px 0 var(--main-color-lighter);
   }
   10% {
     text-shadow: 3px 3px 0 var(--main-color-lighter);
@@ -200,7 +265,7 @@ body {
     text-shadow: 3px 3px 0 var(--main-color-lighter);
   }
   100% {
-    text-shadow: none;
+    text-shadow: 3px 3px 0 var(--main-color-lighter);
   }
 }
 
@@ -222,33 +287,6 @@ body {
   }
 }
 
-.cursor{
-  width: 30px;
-  height: 30px;
-  border: 1px solid white;
-  border-radius: 50%;
-  position: absolute;
-  z-index: 100;
-  transition-duration: 0.1s;
-  transition-timing-function: ease-out;
-  animation: animatePointer 1s infinite alternate;
-  pointer-events: none;
-}
-
-.cursor::after{
-  content: "";
-  width: 20px;
-  height: 20px;
-  border: 10px var(--main-color) solid;
-  opacity: 0.5;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-}
-
 @keyframes animatePointer{
   0%{
     transform: scale(1);
@@ -257,7 +295,6 @@ body {
     transform: scale(2);
   }
 }
-
 
 
 @media only screen and (max-width: 600px) {
@@ -281,6 +318,11 @@ body {
 
   .pagetitle{
     font-size: 50px;
+  }
+
+  .descriptionrules{
+    font-size: 10px;
+    width: 90%;
   }
 }
 
@@ -310,6 +352,10 @@ body {
     font-size: 60px;
   }
 
+  .descriptionrules{
+    font-size: 12px;
+  }
+
 
 }
 
@@ -323,6 +369,9 @@ body {
     min-width: 160px;
     padding: 0 18px;
     z-index: 1;
+  }
+  .descriptionrules{
+    font-size: 16px;
   }
 
 
@@ -351,6 +400,10 @@ body {
   min-width: 200px;
   padding: 0 18px;
   z-index: 1;
+}
+
+.descriptionrules{
+  font-size: 18px;
 }
 
 }
