--- a/style/style.css
+++ b/style/style.css
@@ -83,9 +83,9 @@ body {
   align-items: center;
   top: 20%;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 20px;
   padding: 0 18px;
-  line-height: 50px;
+  line-height: 60px;
   text-align: center;
   position: relative;
   text-decoration: none;
@@ -94,6 +94,8 @@ body {
   touch-action: manipulation;
   font-family: 'Press Start 2P', cursive;
   z-index: 1;
+  width: 15%;
+  min-width: 120px;
 }
 
 .playbutton:hover {
