--- a/style/navbar.css
+++ b/style/navbar.css
@@ -141,3 +141,22 @@
     padding-top: 5px;
 
 }
+
+.btn-circle {
+    width: auto;
+    height: auto;
+    min-width: 40px;
+    border-radius: 50%;
+    font-size: 15px;
+    text-align: center;
+    padding: 0;
+}
+
+.alert{
+    border-radius: 20px;
+    z-index: 1000;
+    position: fixed;
+    width: 50%;
+    bottom: 0px;
+    left: 25%;
+}
