--- a/style/navbar.css
+++ b/style/navbar.css
@@ -150,6 +150,11 @@
     font-size: 15px;
     text-align: center;
     padding: 0;
+    color: white;
+}
+
+.btn-circle:hover{
+    color: black;
 }
 
 .alert{
