--- a/style/game.css
+++ b/style/game.css
@@ -50,6 +50,15 @@ body {
     padding: 0px;
   }
 
+  .containerGameOver{
+    display: none;
+    width: 100vw;
+    hwight: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+  }
+
   .gameOver{
     width: 100vw;
     height: 100vh;
@@ -64,4 +73,15 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'Press Start 2P', cursive;
+  }
+
+  #restartButton{
+    background-color: var(--main-color-lighter);
+    color: var(--complementary-color-lighter);
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 20px;
+    border: 2px solid black;
   }
