--- a/style/game.css
+++ b/style/game.css
@@ -136,6 +136,24 @@ body {
     font-size: 20px;
   }
 
+  .shotcontainer{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 50%;
+    height: 40%;
+    display: none;
+  }
+
+  .scrollercontainer{
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 50%;
+    height: 40%;
+    display: none;
+  }
+
   @media screen and (max-width: 768px) {
     .textInfoGame{
       font-size: 10px;
@@ -150,5 +168,12 @@ body {
       color: white;
       font-size: 8px;
       background: var(--main-color-darker);
+    }
+    .shotcontainer{
+      display: block;
+    }
+
+    .scrollercontainer{
+      display: block;
     }
   }
